--- a/.htaccess
+++ b/.htaccess
@@ -5,22 +5,28 @@ RewriteEngine On
 RewriteCond %{THE_REQUEST} /index\.html [NC]
 RewriteRule ^(.*)index\.html$ /$1 [R=301,L]
 
-# Remove .html extension from URLs
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^([^.]+)$ $1.html [L]
-
 # Redirect to remove .html extension in the URL
 RewriteCond %{THE_REQUEST} ^[A-Z]{3,}\s([^.]+)\.html [NC]
 RewriteRule ^ %1 [R=301,L]
 
-# Redirect to remove trailing slash if not a directory
+# Remove trailing slash if not a directory
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)/$ /$1 [R=301,L]
+RewriteCond %{REQUEST_URI} (.+)/$
+RewriteRule ^ %1 [R=301,L]
+
+# Internally map requests without .html extension to .html files
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule ^([^.]+)$ $1.html [L]
+
+# Prevent indexing of .html URLs by setting X-Robots-Tag
+<If "%{THE_REQUEST} =~ m#\.html#">
+    Header set X-Robots-Tag "noindex, nofollow"
+</If>
 
 # Redirect www to non-www (optional, uncomment if needed)
-# RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
-# RewriteRule ^(.*)$ https://%1/$1 [R=301,L]
+RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
+RewriteRule ^(.*)$ https://%1/$1 [R=301,L]
 
 # Redirect HTTP to HTTPS (optional, uncomment if needed)
 # RewriteCond %{HTTPS} off
